# torchclim

./: README.md
cesm-module/src.cam/: diag_ml.F90  export_state.F90  initindx.F90  machine_learning_model.F90  machine_learning_model_config.F90  ml_solin.F90  ml_srfxfer.F90  physpkg.F90  tphysac.F90  tphysac_param.F90  tphysbc.F90  tphysbc_ml.F90  tphysbc_param.F90  tphysbc_param_and_ml_joined.F90
examples/: torchscript_example.py
torch-wrapper/: CMakeLists.txt  build.sh
torch-wrapper/env/: install-deps.sh  load-env.sh
torch-wrapper/src/: CMakeLists.txt  cam4_profile.f90  plugin-test.f90
torch-wrapper/src/interface/: CMakeLists.txt  torch-plugin.f90  torch-wrap-cdef.f90  torch-wrap.cpp
